mreview/inventory-api/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: inventory-api.dev.mysillydreams.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: inventory-api
            port:
              number: 80
